// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OwnDriverFeeDetails Component Test OwnDriverFeeDetails UI snapshot when isPickup is false 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="sc-bczRLJ sc-gsnTZi gJZKis hzPtvw"
        font-size="14px,16px"
      >
        <div
          class="sc-bczRLJ jITePI"
        >
          <div
            class="sc-bczRLJ copdwV"
            width="190px"
          >
            When would you like your laundry to be 
            delivered
            ?
          </div>
          <div
            class="sc-bczRLJ gfAZjI"
            font-size="24px"
          >
            Delivery fee: 
             
            $5.00
          </div>
        </div>
        <img
          class="sc-bczRLJ kTaUgy"
          src="Blue_Van.svg"
        />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="sc-bczRLJ sc-gsnTZi gJZKis hzPtvw"
      font-size="14px,16px"
    >
      <div
        class="sc-bczRLJ jITePI"
      >
        <div
          class="sc-bczRLJ copdwV"
          width="190px"
        >
          When would you like your laundry to be 
          delivered
          ?
        </div>
        <div
          class="sc-bczRLJ gfAZjI"
          font-size="24px"
        >
          Delivery fee: 
           
          $5.00
        </div>
      </div>
      <img
        class="sc-bczRLJ kTaUgy"
        src="Blue_Van.svg"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`OwnDriverFeeDetails Component Test OwnDriverFeeDetails UI snapshot when isPickup is true 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="sc-bczRLJ sc-gsnTZi gJZKis hzPtvw"
        font-size="14px,16px"
      >
        <div
          class="sc-bczRLJ jITePI"
        >
          <div
            class="sc-bczRLJ copdwV"
            width="190px"
          >
            When would you like your laundry to be 
            picked up
            ?
          </div>
          <div
            class="sc-bczRLJ gfAZjI"
            font-size="24px"
          >
            Pickup fee: 
             
            $5.00
          </div>
        </div>
        <img
          class="sc-bczRLJ iNuvfW"
          src="Blue_Van.svg"
        />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="sc-bczRLJ sc-gsnTZi gJZKis hzPtvw"
      font-size="14px,16px"
    >
      <div
        class="sc-bczRLJ jITePI"
      >
        <div
          class="sc-bczRLJ copdwV"
          width="190px"
        >
          When would you like your laundry to be 
          picked up
          ?
        </div>
        <div
          class="sc-bczRLJ gfAZjI"
          font-size="24px"
        >
          Pickup fee: 
           
          $5.00
        </div>
      </div>
      <img
        class="sc-bczRLJ iNuvfW"
        src="Blue_Van.svg"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
